# lite-lookup

./: .gitignore  .litelookup_history  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  config.json  llm.py  log.py  logging_config.py  main.py  pyproject.toml  requirements.txt  setup.py  test_input_validation.py
.github/workflows/: ci_litelookup.yml  release.yml
config/: config.py  directory.py  model.py
lite_lookup/: __init__.py  responses.py
litelookup/: chat.py  format.py  llm.py  log.py  main.py  responses.py
litelookup/config/: config.py
litelookup/log/: config.json  logging_config.py
log/: config.json  logging_config.py
scripts/: chlog.sh
tests/: test_config.py  test_input_validation.py
