[tool.poetry]
name = "litelookup"
version = "0.20.4"
description = "A command line tool for quick concept lookups"
authors = ["Abdulmumin Akinde <lanreywaju97@gmail.com>"]
license = "MIT"
readme = "README.md"

include = ["log/*", "config/*"]

[tool.poetry.dependencies]
python = "^3.12"
groq = "^0.12.0"
python-dotenv = "^1.0.1"
redis = "^5.2.0"
httpx = "^0.27.2"
langchain-core = "^0.3.21"
langchain-groq = "^0.2.1"
langchain = "0.3.0"
rich = "^13.9.4"
prompt-toolkit = "^3.0.48"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
debugpy = "^1.8.14"

[tool.poetry.scripts]
lookup = "litelookup.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
