[project]
name = "litelookup"
version = "0.21.4"
description = "A command line tool for quick concept lookups"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.24.0",
    "httpx[http2]>=0.28.1",
    "langchain==0.1.16",
    "langchain-core>=0.1.53",
    "langchain-groq>=0.1.5",
    "prompt-toolkit>=3.0.51",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "redis>=6.0.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "pytest>=8.3.5",
]

[project.scripts]
lookup = "litelookup.main:run_main"

[build-system]  
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
